src/emit/emitter/snapshots/mu__emit__emitter__tests__for_loop_stmt-3.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
for i in 0..=10:
  break


# Func:
function "code":
  frame_size: 6
  length: 59
  const: <empty>
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | push_small_int value=10
    12 | store_reg r5
    14 | load_reg r5
    16 | cmp_le r4
    18 | jump_if_false offset=39
    20 | nop 
    21 | nop 
    22 | nop 
    23 | nop 
    24 | jump offset=21
    26 | nop 
    27 | nop 
    28 | nop 
    29 | nop 
    30 | push_small_int value=1
    35 | add r4
    37 | store_reg r4
    39 | jump_back offset=25
    41 | nop 
    42 | nop 
    43 | nop 
    44 | nop 
    45 | jump offset=12
    47 | nop 
    48 | nop 
    49 | nop 
    50 | nop 
    51 | jump_back offset=21
    53 | nop 
    54 | nop 
    55 | nop 
    56 | nop 
    57 | ret 
    58 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                             ●━━━━━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  
