src/emit/emitter/snapshots/mu__emit__emitter__tests__func-4.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, *, b):
  print a, b

test(1, b=2)


# Func:
function "test":
  frame_size: 7
  length: 19
  const (length=1):
    0: "b"
  code:
     0 | load_kw_param [0], r5
     3 | create_empty_list 
     4 | store_reg r6
     6 | load_reg r4
     8 | push_to_list r6
    10 | load_reg r5
    12 | push_to_list r6
    14 | print_list r6
    16 | push_none 
    17 | ret 
    18 | suspend 

function "code":
  frame_size: 6
  length: 29
  const (length=3):
    0: <func "test">
    1: "test"
    2: "b"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | push_small_int value=1
     9 | store_reg r5
    11 | create_empty_dict 
    12 | store_reg r4
    14 | push_small_int value=2
    19 | insert_to_dict_named [2], r4
    22 | load_global [1]
    24 | call_kw r4, args=1
    27 | ret 
    28 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  
